Matches endpoints updated to create multiple matches
