# src/main/kotlin/com/grondona/model/dto/request/Tournaments.kt
@@ -4,6 +4,7 @@ import com.grondona.model.Awards
 import com.grondona.model.PlayerPosition
 import com.grondona.model.TournamentStatus
 import jakarta.validation.constraints.NotBlank
+import jakarta.validation.constraints.NotEmpty
 import jakarta.validation.constraints.NotNull
 import org.springframework.format.annotation.DateTimeFormat
 import java.time.LocalDate
@@ -49,6 +50,11 @@ data class CreatePlayerRequest(
     @field:NotNull(message = "Birthdate is required")
     @field:DateTimeFormat(iso = DateTimeFormat.ISO.DATE)
     val birthdate: LocalDate,
+)
+
+data class CreateMatchesRequest(
+    @field:NotEmpty(message = "Matches are required")
+    val matches: List<CreateMatchRequest>,
 )
 
 data class CreateMatchRequest(
